# minimemory

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  USE_CASES_ANALYSIS.md  npm-readme.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
audit/: AUDIT-SUMMARY.md  audit-A-core-storage.md  audit-B-indexes-simd.md  audit-C-search-query-quant.md  audit-D-memory-replication.md  audit-E-bindings-embeddings.md
benches/: benchmark.rs
bindings/nodejs/: README.md  index.d.ts  index.js  package.json
bindings/php/: MiniMemory.php  README.md
bindings/python/: README.md  pyproject.toml
bindings/python/python/minimemory/: __init__.py
demo-data/: VIDEO-SCRIPT.md  query-vector.json  sample-vectors.json  simple-5d-vectors.json  simple-query.json
examples/: agent_memory_demo.rs  basic.rs  cloudflare_gemma.ts  local_embeddings.rs  okf_demo.rs  ollama_memory.rs  wal_crash_demo.rs
examples/browser/: index.html  test.html
minimemory-dashboard/: index.html  package-lock.json  package.json
minimemory-dashboard/src/: App.tsx  index.css
minimemory-dashboard/src/api/: auth.ts  client.ts  hooks.ts  types.ts
minimemory-dashboard/src/components/: SettingsModal.tsx
minimemory-dashboard/src/components/auth/: AuthGuard.tsx
minimemory-dashboard/src/components/layout/: Header.tsx  Layout.tsx
minimemory-dashboard/src/components/memory/: CreateMemoryModal.tsx  MemoryList.tsx  MemoryModal.tsx  SearchBar.tsx
minimemory-dashboard/src/components/stats/: ImportanceChart.tsx  StatsCards.tsx  TypeChart.tsx
minimemory-dashboard/src/contexts/: AuthContext.tsx
minimemory-dashboard/src/hooks/: useTheme.ts
minimemory-dashboard/src/lib/: utils.ts
minimemory-dashboard/src/pages/: AgentTokens.tsx  Dashboard.tsx  Documentation.tsx  Login.tsx  Register.tsx
minimemory-mcp/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
minimemory-mcp/src/: index.ts  mcp.ts
minimemory-mcp/src/client/: minimemory.ts
minimemory-py/: CHANGELOG.md  README.md  pyproject.toml
minimemory-py/minimemory/: __init__.py  client.py  exceptions.py  types.py
minimemory-py/tests/: conftest.py  test_client.py  test_e2e.py  test_embed.py  test_knowledge.py
minimemory-sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
minimemory-sdk/src/: client.ts  index.ts  types.ts
minimemory-sdk/tests/: client.test.ts  e2e.test.ts
minimemory-service/: API.md  AUDIT.md  KNOWLEDGE.md  QUANTIZATION.md  README.md  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts  wrangler.toml
minimemory-service/.wrangler/tmp/bundle-24vIEO/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-4hX1K8/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-Hs37bs/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-NollIx/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-OegDjm/: middleware-insertion-facade.js  middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-fCESHO/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/bundle-ymPfxN/: middleware-loader.entry.ts
minimemory-service/.wrangler/tmp/dev-1XjkR9/: index.js  index.js.map
minimemory-service/.wrangler/tmp/dev-3x3fU0/: index.js  index.js.map
minimemory-service/demo/: quick-test.ps1  test-api.mjs  test-api.sh
minimemory-service/migrations/: 001_auth_tables.sql  002_audit_log.sql  003_knowledge_bank.sql
minimemory-service/src/: index.ts  server.ts
minimemory-service/src/api/: memory.ts
minimemory-service/src/core/: BM25Index.ts  HybridSearch.ts  Quantization.ts  VectorDB.ts  index.ts
minimemory-service/src/memory/: MemoryManager.ts  index.ts  types.ts
minimemory-service/src/middleware/: auth.ts  index.ts  jwt.ts  rateLimit.ts  tenant.ts
minimemory-service/src/routes/: agent-tokens.ts  audit.ts  auth.ts  knowledge.ts  tenants.ts  webhooks.ts
minimemory-service/src/services/: AgentTokenService.ts  AuditService.ts  EmbeddingService.ts  KnowledgeService.ts  WebhookService.ts  index.ts
minimemory-service/src/storage/: D1Storage.ts  index.ts
minimemory-service/src/utils/: password.ts  tokens.ts
minimemory-service/tests/api/: memory.test.ts
minimemory-service/tests/core/: BM25Index.test.ts  Quantization.test.ts  VectorDB.test.ts
minimemory-service/tests/middleware/: rateLimit.test.ts
minimemory-service/tests/routes/: auth.test.ts  tenants.test.ts
minimemory-service/tests/services/: AuditService.test.ts  EmbeddingService.test.ts  KnowledgeService.test.ts  WebhookService.test.ts
minimemory-service/tests/storage/: D1Storage.test.ts
minimemory-service/tests/utils/: password.test.ts
npm-src/: index.ts
scripts/: build-npm.sh
src/: agent_memory.rs  chunking.rs  db.rs  error.rs  lib.rs  memory_traits.rs  metadata_index.rs  okf.rs  partial_index.rs  quantization.rs  replication.rs  reranker.rs  transfer.rs  types.rs  wal.rs
src/bindings/: ffi.rs  mod.rs  nodejs.rs  python.rs  wasm.rs
src/distance/: mod.rs  simd.rs
src/embeddings/: bert.rs  gemma.rs  mod.rs
src/index/: bm25.rs  flat.rs  hnsw.rs  ivf.rs  mod.rs
src/query/: filter.rs  mod.rs  operators.rs
src/search/: hybrid.rs  mod.rs  rrf.rs
src/storage/: disk.rs  format.rs  memory.rs  mod.rs
tests/: integration.rs
vectorpass/: .env.example  README.md  build-wasm.sh  package-lock.json  package.json  wrangler.toml
vectorpass-mcp/: PLAN.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
vectorpass-mcp/src/: index.ts  types.ts  vectorpass-client.ts
vectorpass-mcp/src/mcp/: server.ts  tools.ts  types.ts
vectorpass-mcp/src/oauth/: authorize.ts  pkce.ts  register.ts  token.ts  types.ts
vectorpass-mcp/src/pages/: login.ts  verify.ts
vectorpass-web/: package-lock.json  package.json
vectorpass-web/public/: admin.html  dashboard.html  index.html
vectorpass/scripts/: setup-stripe.js
vectorpass/src/: auth.ts  database.ts  email.ts  index.ts  ratelimit.ts  stripe.ts  types.ts  vectordb.ts
(+10 files in other folders)
