[package]
name = "minimemory"
version = "3.0.0"
edition = "2021"
description = "Embedded vector database library for Rust - like SQLite for vectors"
license = "MIT"
repository = "https://github.com/MauricioPerera/minimemory"
homepage = "https://github.com/MauricioPerera/minimemory"
keywords = ["vector", "database", "embeddings", "similarity", "hnsw"]
categories = ["database", "data-structures"]
exclude = [
    "pkg/", "examples/", "demo-data/", "minimemory-dashboard/",
    "minimemory-service/", "minimemory-mcp/", "npm-src/",
    "npm-readme.md", "vectorpass-search/",
]

[lib]
name = "minimemory"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.10"
regex-lite = "0.1"
crc32fast = "1.4"

# Markdown processing — git-only, excluded from crates.io publish
# mq-markdown = { git = "https://github.com/harehare/mq", optional = true, features = ["json"] }


# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Node.js bindings (optional)
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Local embeddings (optional - for built-in embedding generation)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", optional = true, default-features = false, features = ["tokio", "online"] }
tokio = { version = "1", optional = true, features = ["rt"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
python = ["pyo3"]
nodejs = ["napi", "napi-derive"]
ffi = []
# chunking = ["mq-markdown"]  # git-only, not on crates.io
wasm = ["wasm-bindgen", "js-sys", "getrandom"]
embeddings = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "tokio"]

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
