[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimemory"
version = "0.1.0"
description = "Python SDK for minimemory vector database service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "minimemory", email = "support@minimemory.dev" }
]
keywords = [
    "minimemory",
    "vector-database",
    "embeddings",
    "semantic-search",
    "rag",
    "memory",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/anthropics/minimemory"
Documentation = "https://github.com/anthropics/minimemory#readme"
Repository = "https://github.com/anthropics/minimemory"

[tool.hatch.build.targets.wheel]
packages = ["minimemory"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
